muscima predictor demo; changed coco conversion; changed NUM_CLASSES and removed RPN_ONLY in .yml file; other small changes

--- a/maskrcnn-benchmark/configs/e2e_faster_rcnn_R_50_FPN_1x_coco2017.yaml
+++ b/maskrcnn-benchmark/configs/e2e_faster_rcnn_R_50_FPN_1x_coco2017.yaml
@@ -1,6 +1,6 @@
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
- # WEIGHT: "catalog://ImageNetPretrained/MSRA/R-50"
+  WEIGHT: "catalog://ImageNetPretrained/MSRA/R-50"
   BACKBONE:
     CONV_BODY: "R-50-FPN"
     OUT_CHANNELS: 256
@@ -14,15 +14,14 @@ MODEL:
   ROI_HEADS:
     USE_FPN: True
   ROI_BOX_HEAD:
-    NUM_CLASSES: 12
     POOLER_RESOLUTION: 7
     POOLER_SCALES: (0.25, 0.125, 0.0625, 0.03125)
     POOLER_SAMPLING_RATIO: 2
     FEATURE_EXTRACTOR: "FPN2MLPFeatureExtractor"
     PREDICTOR: "FPNPredictor"
 DATASETS:
-  TRAIN: ("muscima_train", "muscima_val")
-  TEST: ("muscima_test",)
+  TRAIN: ("coco_2017_train",)
+  TEST: ("coco_2017_val",)
 DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
@@ -30,8 +29,3 @@ SOLVER:
   WEIGHT_DECAY: 0.0001
   STEPS: (60000, 80000)
   MAX_ITER: 90000
-INPUT:
-  MIN_SIZE_TRAIN: 128
-  MAX_SIZE_TRAIN: 128
-  MIN_SIZE_TEST: 128
-  MAX_SIZE_TEST: 128
